# gdf2sql

./: README.md  TODO.md  pyproject.toml
.github/workflows/: python-package.yml
gdf2sql/: gdf2sql.py
tests/: conftest.py  test_gdf2sql.py
