[tool.poetry]
name = "gdf2sql"
version = "0.1.0"
description = ""
authors = ["Lucas Bruand <l.bruand.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.14.3"
sqlalchemy = "^2.0.25"
geoalchemy2 = "^0.14.3"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
psycopg2-binary = "^2.9.9"
pytest-postgres = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
